# cxterm

./: ChangeLog  INSTALL-5.2  Imakefile  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.ini  README-5.2  README.emacs  README.md  README.terminfo  README.unix98  acconfig.h  config.h  config.h.in  config.status  config_cygwin32.sh  configure  configure.in  cxterm.spec  cxterm.termcap  cxterm.terminfo  imake.local  mkinstalldirs
Doc/: 0_index  COPYRIGHT  CXTERM.FAQ  HISTORY  README.5.1  WuBiCode_1986.txt  bug-report  input.doc  version  x-resrc
Doc/tutorial-2/: cjb.ps  readme.doc  wbb.ps
Xcompat/: Xfuncs.h  imake-R4.compat  imake-R5.compat  imake-R6.compat
cxterm/: CXterm.ad  HZInput.c  HZassoc.c  HZbuiltn.c  HZchList.c  HZfilter.c  HZfunpro.h  HZinArea.c  HZinCntx.c  HZinMthd.c  HZinput.h  HZpopup.c  HZtable.h  HZtrie.c  HZtrieWc.c  HZutil.c  Imakefile  Makefile  Makefile.am  Makefile.in  TekPrsTbl.c  Tekproc.c  button.c  charproc.c  cursor.c  cxterm.1  cxterm.man  data.c  data.h  input.c  main.c  main.h  menu.c  menu.h  misc.c  ptyx.h  screen.c  scrollbar.c  tabs.c  util.c
cxterm/.deps/: HZInput.Po  HZassoc.Po  HZbuiltn.Po  HZchList.Po  HZfilter.Po  HZinArea.Po  HZinCntx.Po  HZinMthd.Po  HZpopup.Po  HZtrie.Po  HZtrieWc.Po  HZutil.Po  TekPrsTbl.Po  Tekproc.Po  VTPrsTbl.Po  button.Po  charproc.Po  cursor.Po  data.Po  input.Po  main.Po  menu.Po  misc.Po  screen.Po  scrollbar.Po  tabs.Po  util.Po
cxterm/widgets/: xp.ad  xp.ah  xp.ch  xp.vh
debian/: .README.debian  changelog  conffiles  control  copyright  cxterm-big5.files  cxterm-big5.menu  cxterm-big5.postinst  cxterm-big5.prerm  cxterm-common.docs  cxterm-common.files  cxterm-common.postinst  cxterm-common.postrm  cxterm-gb.files  cxterm-gb.menu  cxterm-gb.postinst  cxterm-gb.prerm  cxterm-jis.files  cxterm-jis.menu  cxterm-jis.postinst  cxterm-jis.prerm  cxterm-ks.files  cxterm-ks.menu  cxterm-ks.postinst  cxterm-ks.prerm  cxtermb5  cxtermgb  cxtermjis  cxtermks  dirs  rules  watch
dict/: Imakefile  Makefile  Makefile.am  Makefile.in
dict/big5/: 4Corner.tit  ARRAY30.tit  Boshiamy.tit  CangJie.tit  ETZY.tit  English.tit  HSU.tit  Imakefile  Makefile  Makefile.am  Makefile.in  Punct.tit  QJ.tit  Simplex.tit  ZOZY.tit
dict/gb/: CangJie.tit  English.tit  HIRAGANA.tit  Imakefile  KATAKANA.tit  Makefile  Makefile.am  Makefile.in  Punct.tit  QJ.tit  QianMa.tit  SW.tit  TONEPY.tit  TeleCode.tit  UCDOSPY.tit  WuBi.tit
dict/jis/: Imakefile  Makefile  Makefile.am  Makefile.in  Punct.tit  QJ.tit  ROMKANA.tit  TCODE.tit
dict/ks/: HANGUL.tit  HANJA.tit  Imakefile  Makefile  Makefile.am  Makefile.in  Punct.tit  QJ.tit  simple.lx
emacs/: cemacs.el
emacs/attic/JJLuo/: cemacs.el
emacs/attic/JuLi/: cemacs.el
emacs/attic/Simpson/: cemacs.el
fonts/: Imakefile  Makefile  Makefile.am  Makefile.in  fonts.alias  fonts.dir  gb16fs.bdf  hku16et.bdf
scripts/: Makefile  Makefile.am  Makefile.in  config_cygwin32.sh  cxterm.tpl  cxtermrc.tpl  genCxterm  installc_cygwin32.sh
utils/: Imakefile  Makefile  Makefile.am  Makefile.in  cit2tit.1  cit2tit.c  cit2tit.man  hzimctrl.1  hzimctrl.c  hzimctrl.man  tit2cit.1  tit2cit.c  tit2cit.man
utils/.deps/: hzimctrl.Po
