bin_PROGRAMS = cxterm.bin
cxterm_bin_SOURCES =\
    button.c    HZbuiltn.c  HZinMthd.c  HZutil.c  screen.c     util.c \
    charproc.c  HZchList.c  HZInput.c   input.c   scrollbar.c  VTPrsTbl.c \
    cursor.c    HZfilter.c  HZpopup.c   main.c    tabs.c \
    data.c      HZinArea.c  HZtrie.c    menu.c    Tekproc.c \
    HZassoc.c   HZinCntx.c  HZtrieWc.c  misc.c    TekPrsTbl.c
noinst_HEADERS = \
    data.h   HZfunpro.h  HZtable.h  menu.h  Tekparse.h \
    error.h  HZinput.h   main.h     ptyx.h  VTparse.h
man_MANS = cxterm.1
CLEANFILES = tags
EXTRA_DIST = cxterm.1 widgets/xp.ad widgets/xp.ah widgets/xp.ch widgets/xp.vh
